--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: sans-serif;
 }
 
 .page-container {
@@ -27,6 +18,10 @@ code {
 
 .product-list-item {
   padding: 5px;
+}
+
+.product-list-item a {
+  text-decoration: none;
 }
 
 .header {
@@ -64,11 +59,6 @@ code {
 .header-link-active {
   border-bottom: #ebebeb solid 2px;
 }
-
-.product-list-item a {
-  text-decoration: none;
-}
-
 .search-container {
   text-align: right;
   margin-bottom: -25px;
@@ -166,33 +156,30 @@ code {
   width: 300px;
   margin: 0px auto 0px auto;
 }
-
 .form-group {
   display: flex;
   flex-direction: column;
   margin-bottom: 20px;
 }
-
 .form-group label {
   align-self: flex-start;
   font-size: 16px;
   margin-bottom: 3px;
 }
-
-.form-group input, select, textarea {
+.form-group input,
+select,
+textarea {
   font-family: Arial;
   font-size: 16px;
   padding: 5px;
   border: lightgray solid 1px;
   border-radius: 5px;
 }
-
 .form-error {
   font-size: 13px;
   color: red;
   margin: 3px auto 0px 0px;
 }
-
 .form-group button {
   font-size: 16px;
   padding: 8px 5px;
@@ -206,4 +193,19 @@ code {
   border: gray solid 1px;
   background-color: gray;
   cursor: not-allowed;
+}
+
+.basket-summary {
+  display: inline-block;
+  margin-left: 10px;
+  padding: 5px 10px;
+  border: white solid 2px;
+}
+
+.like-container {
+  margin-top: 20px;
+}
+
+.like-container button {
+  margin-top: 5px;
 }
